tests/suite/snapshots/suite__parse__tests__parse__group_of_anonymous03_01_4.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/group_of_anonymous03_01_4.xi:8:29]
   │
 8 │     printab("Hello, World\n";
   ·                             ┬  
   ·                             ╰── Unexpected token
───╯

